--- a/certamen-2/src/index.scss
+++ b/certamen-2/src/index.scss
@@ -1,6 +1,6 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
 @import "../node_modules/bootstrap/dist/css/bootstrap-utilities.min.css";
 @import "../node_modules/primereact/resources/themes/lara-light-purple/theme.css";
-@import '../node_modules/primeicons/primeicons.scss'
+@import '../node_modules/primeicons/primeicons.css'
 
 
